--- a/src/sample/graphic/sample.fxml
+++ b/src/sample/graphic/sample.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" prefHeight="458.0" prefWidth="582.0" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="458.0" prefWidth="582.0" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.graphic.Controller">
    <columnConstraints>
       <ColumnConstraints percentWidth="0.0" />
    </columnConstraints>
